--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules
+config_ctrl.js
+datasource.js
+query_ctrl.js
+src/config_ctrl.js
+src/datasource.js
+src/module.js
+src/query_ctrl.js
+
